--- a/lib/_core/index.sass
+++ b/lib/_core/index.sass
@@ -217,7 +217,8 @@ header
 				&:after
 					+pos(abs, -19px 1.2rem null initial)
 
-
+.lg-backdrop.in
+	background: #000000!important
 .ankhanh-title
 	+fz(r(36px))
 	color: color-get($ankhanh, main)
