--- a/lib/ankhanhjvc/t-1/index.sass
+++ b/lib/ankhanhjvc/t-1/index.sass
@@ -24,7 +24,7 @@
 				background: -webkit-linear-gradient(top, rgba(255,255,255,1) 0%,rgba(255,255,255,0) 22.5%,rgba(255,255,255,0) 100%)
 				background: linear-gradient(to bottom, rgba(255,255,255,1) 0%,rgba(255,255,255,0) 22.5%,rgba(255,255,255,0) 100%)
 				filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#00ffffff',GradientType=0 )
-	i 
+	em
 		font-weight: 900
 		font-size: 2.57rem
 		padding-right: 0.78rem
