upload page AnKhanhJVC

--- a/lib/ankhanhjvc/t-2/index.pug
+++ b/lib/ankhanhjvc/t-2/index.pug
@@ -1,7 +1,7 @@
 section.canhcam-jvc-2
 	.container
 		h2.ankhanh-title An khánh jvc
-		.row.item-first
+		.row.item-first.mb-5
 			.col-lg-8
 				.text.text-first
 					p Ngày 18 tháng 08 năm 2006, Tổng Công ty XNK xây dựng Việt Nam (Vinaconex) và Công ty Posco E&C (Hàn Quốc) đã ký hợp đồng hợp tác đầu tư thực hiện dự án Khu đô thị mới Bắc An Khánh.(Splendora).
@@ -20,6 +20,34 @@ section.canhcam-jvc-2
 						li Fax: (84.24) 3755.6546
 						li Website: www.splendora.vn
 						li Email: info@ankhanhjvc.com
-		.row.item
+		.row.item-second.mb-5
 			.col-12
-				.text
+				.row.d-flex.align-items-center
+					.col-3.item
+						figure.d-flex.justify-content-center
+							img.img-fluid(src="./img/ankhanhjvc/ankhanhjvc/logo-1.png", alt="", srcset="")
+					.col-9.item
+						.text.text-first
+							p Được thành lập ngày 27/09/1988, Tổng Công ty XNK Xây dựng Việt Nam (VINACONEX) với chức năng chính là Xây lắp các công trình dân dụng, công nghiệp, cơ sở hạ tầng, cấp thoát nước và môi trường…, xuất nhập khẩu máy móc, thiết bị, vật tư phục vụ ngành xây dựng và các ngành kinh tế khác; đưa lao động đi làm việc có thời hạn ở nước ngoài và đầu tư vào các lĩnh vực xây dựng, sản xuất vật liệu xây dựng, các khu đô thị, khu công nghiệp, các dự án điện, nước…
+				.row
+					.col.item
+						.text.text-second
+							p Tổng Công ty có trên 70 đơn vị đầu mối trực thuộc hoạt động trên khắp mọi miền của đất nước với đội ngũ hơn 40.000 cán bộ, kỹ sư, chuyên gia, công nhân viên trong đó có nhiều người đã được đào tạo và làm việc tại nước ngoài, có kiến thức chuyên sâu và giàu kinh nghiệm.
+							p Trong quá trình hoạt động, VINACONEX luôn coi trọng và xác định chữ tín với khách hàng là yếu tố quan trọng hàng đầu. 
+							p Đến nay, VINACONEX đã tạo dựng được uy tín và thương hiệu của mình trên thị trường, được các khách hàng trong và ngoài nước tôn trọng, đánh giá cao, đặt niềm tin cho để thiết lập quan hệ hợp tác kinh doanh trong các lĩnh vực mà hai bên cùng quan tâm.
+		.row.item-third
+			.col-12
+				.row.d-flex.align-items-center
+					.col-3.item
+						figure.d-flex.justify-content-center
+							img.img-fluid(src="./img/ankhanhjvc/ankhanhjvc/logo-2.png", alt="", srcset="")
+					.col-9.item
+						.text.text-first
+							p Là một trong nhưng tập đoàn tiên phong "khai phá"  tiềm năng vùng đất phía Nam thành phố, nhà phát triển bất động sản Phú Long ra đời cách đây hơn một thập kỷ, với sứ mệnh đánh thức những vùng đất ngủ quên, trở thành những đô thị văn minh, hiện đại; kiến tạo những công trình mà giá trị vượt thời gian, những không gian sống tiện nghi, văn hóa, an ninh, thân thiện với môi trường.
+				.row
+					.col.item
+						.text.text-second
+							p Trên đường vươn đến đỉnh cao của những dự án, Phú Long không bao giờ thỏa hiệp về vị trí, kiến trúc, sự sang trọng và chất lượng. Có được một kiệt tác vượt thời gian là thử thách và mục tiêu để Phú Long luôn vươn đến.
+							p Tất cả các công trình của Phú Long đều được xây dựng trên phương châm chất lượng tốt, tiến độ nhanh, tiện nghi hoàn hảo, mang lại giá trị nhân văn sâu sắc và thấm đẫm hơi thở của thiên nhiên.
+							p Hướng đến mục tiêu trở thành Nhà phát triển bất động sản mang tầm vóc quốc tế, được sự hẫu thuẫn của Tập đoàn Sovico, Phú Long đẩy mạnh chiến lược đầu tư, xây dựng và phát triển những dự án có vị trí thuận lợi tại các thành phố lớn, những địa danh du lịch nổi tiếng như Hồ Chí Minh, hà Nội , Nhà Trang, Đà Nẵng, Phú Quốc,... Phú Long sẽ tham gia vào toàn bộ công tác xây dựng dự án, kinh doanh tiếp thị và quản lý vận hành theo những phương châm hoạt động mà Phú Long đã cam kết, góp phần kiến tạo những khu đô thị mới hiện đại, những cộng đồng phồn vinh, nơi đầu tư phát lộc, xứng đáng là thương hiệu mà khách hàng và đối tác ủng hộ, đặt trọn niềm tin. Các dự án Phú Long đang tham gia phát triển: Dragon Riverside City, Dragon Village,...
+							p Phú Long cam kết luôn làm tất cả vì khách hàng và cộng đồng, xây dựng những sản phẩm hoàn hảo nhất, phát triển dự an theo những chuẩn mực tốt nhất để đảm bảo mỗi công trình, mỗi căn nhà luôn gia tăng giá trị thông qua phương thức quản lý quốc tế, được quảng bá rộng rãi và có trách nhiệm cao với cộng đồng.
