--- a/lib/ankhanhjvc/t-2/index.sass
+++ b/lib/ankhanhjvc/t-2/index.sass
@@ -38,3 +38,39 @@
 							height: 8px
 							+bor-rad(50%)
 							background: color-rgba(color-get($ankhanh,den),.15)
+	.item-second
+		.col-12
+			-webkit-border-image: url('../img/ankhanhjvc/tamnhin/border.png') 19/19px round
+			+pad(r(36px) r(33px))
+			.row
+				&:first-child
+					margin-bottom: 2rem
+				.item
+					figure
+						+mar(0)
+					.text
+						p
+							text-align: justify
+							+mar(0)
+							+fz(r(16px))
+						&.text-second
+							p
+								margin-bottom: 1.5rem
+	.item-third
+		.col-12
+			-webkit-border-image: url('../img/ankhanhjvc/tamnhin/border.png') 19/19px round
+			+pad(r(36px) r(33px))
+			.row
+				&:first-child
+					margin-bottom: 2rem
+				.item
+					figure
+						+mar(0)
+					.text
+						p
+							text-align: justify
+							+mar(0)
+							+fz(r(16px))
+						&.text-second
+							p
+								margin-bottom: 1.5rem
