--- a/lib/ankhanhjvc/t-3/index.sass
+++ b/lib/ankhanhjvc/t-3/index.sass
@@ -15,7 +15,7 @@
 			box-shadow: 10px 10px 0 0 color-rgba(color-get($ankhanh, main),.35)
 	.content
 		+pad(2rem 3.5rem)
-		-webkit-border-image: url('../img/ankhanhjvc/tamnhin/border.png') 19/19px round
+		-webkit-border-image: url('/Data/Sites/1/media/border.png') 19/19px round
 		height: 100%
 		.text
 			margin-top: 1.5rem
