--- a/lib/ankhanhjvc/t-2/index.sass
+++ b/lib/ankhanhjvc/t-2/index.sass
@@ -40,7 +40,7 @@
 							background: color-rgba(color-get($ankhanh,den),.15)
 	.item-second
 		.col-12
-			-webkit-border-image: url('../img/ankhanhjvc/tamnhin/border.png') 19/19px round
+			-webkit-border-image: url('/Data/Sites/1/media/border.png') 19/19px round
 			+pad(r(36px) r(33px))
 			.row
 				&:first-child
@@ -58,7 +58,7 @@
 								margin-bottom: 1.5rem
 	.item-third
 		.col-12
-			-webkit-border-image: url('../img/ankhanhjvc/tamnhin/border.png') 19/19px round
+			-webkit-border-image: url('/Data/Sites/1/media/border.png') 19/19px round
 			+pad(r(36px) r(33px))
 			.row
 				&:first-child
