--- a/lib/tienich/t-1/index.sass
+++ b/lib/tienich/t-1/index.sass
@@ -82,7 +82,7 @@
 					display: flex
 					align-items: center
 					figure
-						background: url('../img/tienich/text_bg.png') no-repeat
+						background: url('/Data/Sites/1/media/text_bg.png') no-repeat
 						background-size: cover
 						+pad(2.5rem)
 						margin-left: -4rem
