fix css ankhanh-navbar/n-1, index/box-3, index/box-4, nav/n-4, tienich/t-1

--- a/lib/index/b-3/index.sass
+++ b/lib/index/b-3/index.sass
@@ -20,8 +20,11 @@
 		.box-content
 			+mar(0 0 4rem 0)
 			.content
+				text-align: center
 				+fz(r(16px))
 				+fw(300)
+				+media-breakpoint-up(lg)
+					text-align: left
 		.box-img
 			overflow: hidden
 			border: 1px solid color-get($ankhanh,main)
