--- a/lib/index/b-4/index.sass
+++ b/lib/index/b-4/index.sass
@@ -13,6 +13,7 @@
 			color: color-get($ankhanh, trang)
 			font-weight: bold
 			+fz(2rem)
+			text-align: left
 			+media-breakpoint-up(lg)
 				+fz(r(36px))
 		.content
