--- a/lib/ankhanh-navbar/n-4/index.pug
+++ b/lib/ankhanh-navbar/n-4/index.pug
@@ -1,14 +1,12 @@
 section.canhcam-ankhanh-navbar
-	.container.navbar-2
-		.row
-			.col
-				ul.nav.justify-content-center.nav-pills(data-select)
-					li.nav-item.active
-						a.nav-link(href='ankhanh-resident.html') Hỏi đáp
-					li.nav-item
-						a.nav-link(href='ankhanh-resident-utility.html') Thông tin hậu mãi
-					li.nav-item
-						a.nav-link(href='#') Kiểm tra công nợ
-					li.nav-item
-						a.nav-link(href='#') Thông tin dự án
+	.container
+		ul.nav.nav-list
+			li.nav-item
+				a.nav-link(href="ankhanh-resident.html") Hỏi đáp
+			li.nav-item.active
+				a.nav-link(href="ankhanh-resident-utility.html") Thông tin hậu mãi
+			li.nav-item
+				a.nav-link(href='#') Kiểm tra công nợ
+			li.nav-item
+				a.nav-link(href='#') Thông tin dự án
 
