--- a/lib/ankhanh-navbar/n-3/index.pug
+++ b/lib/ankhanh-navbar/n-3/index.pug
@@ -1,12 +1,22 @@
+//- section.canhcam-ankhanh-navbar
+//- 	.container.navbar-2
+//- 		.row
+//- 			.col
+//- 				ul.nav.justify-content-center.nav-pills(data-select)
+//- 					li.nav-item.active
+//- 						a.nav-link(href='ankhanh-news.html') Tin tức nổi bật
+//- 					li.nav-item
+//- 						a.nav-link(href='#') Tin dự án
+//- 					li.nav-item
+//- 						a.nav-link(href='#') Tin công ty
 section.canhcam-ankhanh-navbar
-	.container.navbar-2
-		.row
-			.col
-				ul.nav.justify-content-center.nav-pills(data-select)
-					li.nav-item.active
-						a.nav-link(href='ankhanh-news.html') Tin tức nổi bật
-					li.nav-item
-						a.nav-link(href='#') Tin dự án
-					li.nav-item
-						a.nav-link(href='#') Tin công ty
+	.container
+		ul.nav.nav-list
+			li.nav-item.active
+				a.nav-link(href="ankhanh-news.html") Tin tức nổi bật
+			li.nav-item
+				a.nav-link(href='#') Tin dự án
+			li.nav-item
+				a.nav-link(href='#') Tin công ty
+
 
