fix css of ankhanh-customer-support

--- a/lib/ankhanh-customer-support/c-1/index.sass
+++ b/lib/ankhanh-customer-support/c-1/index.sass
@@ -114,7 +114,10 @@ section.canhcam-suppport-1
 		input, textarea, select
 			background: darken(color-get($ankhanh,trang) ,3%)
 			+pad(.6rem)
+			width: 100%
+			+bor-rad(4px)
 		label
+			display: block
 			color: color-get($ankhanh, xam-ct)
 			+fw(400)
 			+fz(1rem)
@@ -131,3 +134,7 @@ section.canhcam-suppport-1
 			margin-bottom: 2rem
 			+media-breakpoint-up(lg)
 				+fz(r(24px))
+		.btn-ankhanh
+			width: 100%
+			+bor-rad(20px)
+			+bg-rad
